syntax = "proto3";
package ununifi.incentive;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "incentive/incentive.proto";

option go_package = "github.com/UnUniFi/chain/x/deprecated/incentive/types";

// Query defines the gRPC querier service.
service Query {
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
		option (google.api.http).get = "/ununifi/incentive/params";
	}
  // this line is used by starport scaffolding # 2
}

message QueryParamsRequest {}

message QueryParamsResponse {
	Params params = 1;
}

// this line is used by starport scaffolding # 3
